fix spacing

--- a/express/blocks/feature-list/feature-list.css
+++ b/express/blocks/feature-list/feature-list.css
@@ -4,8 +4,9 @@ main .section .feature-list {
     justify-content: center;
     margin: auto;
     margin-top: 56px;
+    text-align: center;
+    max-width: 375px;
 }
-
 
 main .section .feature-list img {
     height: 48px;
@@ -29,4 +30,28 @@ main .section .feature-list h4 {
 
 main .section .feature-list p {
     margin-top: 20px;
+}
+
+main .section:has(.feature-list) {
+    margin: auto;
+}
+
+main .section:has(.feature-list) .content {
+    max-width: unset;
+}
+
+main .section:has(.feature-list) h2 {
+    margin-top: 80px;
+}
+
+@media (min-width: 900px) {
+    main .section:has(.feature-list) {
+        max-width: 830px;
+    }
+}
+
+@media (min-width: 1200px) {
+    main .section:has(.feature-list){
+        max-width: 1024px;
+    }
 }
